# CogniDAO

./: .ai-review-process.md  .coverage  .cursor-shell  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHARTER.md  CLAUDE.md  Dockerfile  Dockerfile.api  MCP_SCHEMA_FIX_PLAN.md  Makefile  OPERATIONS.md  PR.md  README.md  SIMPLICITY_OATH.md  ai-review-process.v1.1.md  check_main_schema.py  cogni-cogni-dao-memory.dockerfile  cogni_graph.md  cogni_spirit.md  conftest.py  debug_branch_state.py  dependency_audit.md  git-cogni  langgraph.json  pr-document.md  prefect.yaml  pyproject.toml  pytest.ini  requirements.api.txt  requirements.txt  run_cogni_api.py  sacred-chaos-pr.md  sitecustomize.py  test.py  test_broadcast_queue_update.py  test_dolt_connection.py  (+7 more)
.github/: SECRET_SETUP.md  (+1 more)
graphs/playwright_basic/: Dockerfile  README.md  __init__.py  graph.py  langgraph.json  pyproject.toml
graphs/playwright_basic/tests/: conftest.py  test_playwright_graph.py
langgraph_projects/: AGENTS.md  pyproject.toml  test_simple_cogni_redis.py
langgraph_projects/cogni_presence/: langgraph.json  main.py  pyproject.toml
langgraph_projects/cogni_presence/tests/: AGENTS.md  conftest.py  test_build_graph_streaming.py  test_cogni_presence_graph.py
langgraph_projects/cogni_presence/utils/: build_graph.py
langgraph_projects/playwright_poc/: graph.py  langgraph.json  pyproject.toml
langgraph_projects/playwright_poc/tests/: test_playwright_graph.py
langgraph_projects/src/cogni_image_gen/: graph.py  main.py  nodes.py  prompts.py  state_types.py  test_graph.py  test_openai_mcp.py
langgraph_projects/src/cogni_image_gen/tests/: __init__.py  conftest.py  test_agent_templates.py  test_cogni_image_gen_graph.py  test_integration_mcp.py
langgraph_projects/src/cogni_presence/: __init__.py  agent.py  ceo_supervisor.py  graph.py  main.py  prompts.py  vp_finance_agent.py  vp_hr_agent.py  vp_marketing_agent.py  vp_product_agent.py  vp_tech_agent.py
langgraph_projects/src/cogni_presence/tests/: __init__.py  conftest.py  test_agent_templates.py  test_agent_templates.py.skip  test_build_graph_streaming.py  test_cogni_presence_graph.py.skip  test_integration_mcp.py  test_prompt_fix_verification.py  test_prompt_template_bug.py  test_prompt_template_bug.py.skip  test_supervisor_basic.py  test_user_message_bug.py.skip
langgraph_projects/src/playwright_poc/: README.md  __init__.py  agent.py  graph.py  main.py  prompts.py  pytest.ini  state_types.py
langgraph_projects/src/playwright_poc/tests/: __init__.py  conftest.py  test_playwright_graph.py
langgraph_projects/src/shared_utils/: __init__.py  error_handling.py  logging_utils.py  mcp_client.py  mcp_monitor.py  model_binding.py  prompt_templates.py  state_types.py  test_mcp_reconnection.py  tool_registry.py  tool_specs.py
langgraph_projects/src/shared_utils/tests/: README.md  __init__.py  conftest.py  test_mcp_client.py  test_mcp_failures.py  test_mcp_health_check.py  test_mcp_monitor.py  test_mcp_reconnection.py  test_prompt_templates.py  test_tool_specs.py
langgraph_projects/src/simple_cogni_agent/: graph.py  main.py  prompts.py  pytest.ini  state_types.py
langgraph_projects/src/simple_cogni_agent/tests/: __init__.py  conftest.py  test_agent_templates.py  test_cogni_presence_graph.py  test_integration_mcp.py  test_prompt_input_bug.py  test_simple_cogni_agent_graph.py
langgraph_projects/src/simple_cogni_agent/utils/: build_graph.py
langgraph_projects/templates/agent/: cogni_presence.j2  playwright_navigator.j2
langgraph_projects/tests/: __init__.py  conftest.py  test_local_model.py
langgraph_projects/tests/integration/: __init__.py  test_redis_checkpointer.py
libs/infra_core/: AGENTS.md  pyproject.toml
libs/infra_core/src/infra_core/: constants.py  prompt_templates.py
libs/infra_core/src/infra_core/memory_system/: README.md  dolt_mysql_base.py  dolt_mysql_connection.mmd  dolt_writer.py  langchain_adapter.py  llama_memory.py  property_mapper.py  sql_link_manager.py  structured_memory_bank.py
libs/infra_core/src/infra_core/model_handlers/: __init__.py
libs/infra_core/tests/memory_system/: README_CONNECTION_RECOVERY.md  conftest.py  manual_connection_recovery_test.py  test_connection_recovery.py  test_dolt_mysql_base_pooling.py  test_dolt_writer.py  test_executable_links.py  test_get_active_work_items_tool.py  test_get_linked_blocks_tool.py  test_llama_memory.py  test_phase1_connection_fix.py
libs/infra_core/tests/memory_system/integrations/: __init__.py
libs/infra_core/tests/memory_system/tools/: __init__.py
prefect_mcp_bridge/: .coverage  LICENSE  README.md  pyproject.toml
prefect_mcp_bridge/examples/: sample_flow.py
prefect_mcp_bridge/src/prefect_mcp_bridge/: __init__.py  client.py  dolt.py  utils.py
prefect_mcp_bridge/tests/: conftest.py  test_client.py  test_dolt_tasks.py
services/mcp_server/: .gitignore  AGENTS.md  Dockerfile.mcp  pyproject.toml  requirements.txt
services/mcp_server/app/: mcp_auto_generator.py  mcp_server.py  tool_registry.py
services/mcp_server/app/core/: config.py
services/mcp_server/tests/: __init__.py  test_active_branch_fix_simple.py  test_branch_isolation.py  test_create_block_link_mcp.py  test_dolt_status_validation.py  test_dolt_validation_fix.py  test_input_normalization_fix.py  test_mcp_integration.py  test_mcp_parameter_fix.py  test_mcp_poc_dry.py  test_mcp_server.py  test_namespace_injection.py  test_namespace_validation.py  test_schema_visibility.py  test_sql_link_manager_integration.py
services/prefect_worker/: AGENTS.md  Dockerfile.prefect-worker  pyproject.toml
services/web_api/: AGENTS.md  Dockerfile.api  __init__.py  app.py  auth_utils.py  cogni_api.py  main.py  models.py  pyproject.toml  requirements.api.txt
services/web_api/routes/: AGENTS.md  blocks_router.py  branches_router.py  chat.py  health.py  links_router.py  namespaces_router.py  schemas_router.py
services/web_api/tests/: conftest.py  test_blocks_router_namespace.py  test_chat.py  test_chat_e2e.py  test_chat_streaming.py  test_chat_validation.py  test_links_router.py
(+1929 files in other folders)
