[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogni-playwright-basic"
version = "0.1.0"
description = "Playwright Basic LangGraph - Browser automation using MCP tools"
authors = [
    { name = "CogniDAO" }
]
dependencies = [
    # Core LangGraph dependencies - compatible versions for deterministic builds
    "langgraph>=0.3.0,<0.4.0",
    "langgraph-checkpoint-redis>=0.0.1,<1.0.0",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "openai>=1.68.2,<1.76.0",
    "redis>=5.0.0,<6.0.0",
    # Playwright and browser automation
    "playwright>=1.49.0",
    # Parent package for shared utilities
    "cogni",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-playwright",
    "ruff",
]

[tool.uv.sources]
cogni = { workspace = true } 