name = "cogni-core-presence"
version = "0.1.0"
description = "Cogni Core Presence Graph"
authors = [
    { name = "CogniDAO" }
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.2.0"
langchain-openai = ">=0.1.17"
langchain-community = ">=0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"