[project]
name = "cogni-core-presence"
version = "0.1.0"
description = "Cogni Core Presence Graph"
authors = [
    { name = "CogniDAO" }
]
dependencies = [
    "langgraph>=0.3.0,<0.4.0",
    "langchain-openai>=0.1.17",
    "langchain-community>=0.2.11",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]