[project]
name = "cogni-core-presence"
version = "0.1.0"
description = "Cogni Core Presence Graph"
authors = [
    { name = "CogniDAO" }
]
dependencies = [
    "langgraph>=0.3.0,<0.4.0",
    "langgraph-checkpoint-redis>=0.0.1,<1.0.0",
    "langchain-openai>=0.1.17",
    "langchain-community>=0.2.11",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "redis>=5.0.0,<6.0.0",
    "langgraph-cli[inmem]>=0.3.3",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]