[project]
name = "cogni-infra-core"
version = "0.1.0"
description = "Core infrastructure library for Cogni memory system and tools"
requires-python = ">=3.11"
dependencies = [
    # Database and storage
    "chromadb>=1.0.0",
    "mysql-connector-python>=8.0.21",
    "doltpy",
    
    # AI and ML frameworks
    "llama-index-core>=0.11,<0.13",
    "llama-index-vector-stores-chroma",
    "llama-index-embeddings-huggingface", 
    "sentence-transformers>=2.2.2",
    
    # LangChain integrations  
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community",
    
    # Data validation and modeling
    "pydantic>=2.8.0",
    
    # Templating and utilities
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.0.0", 
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_core"]

[tool.ruff]
target-version = "py311"
line-length = 100 