[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for Cogni's memory system"
requires-python = ">=3.10"
license = { text = "Private" }
dependencies = [
    "cogni",
    "mcp",
    "uv",
    "pydantic",
    "pydantic-settings",
    "doltpy",
    "mysql-connector-python",
    # Only install the specific llama-index components we need (avoid main llama-index package that pulls in OpenAI)
    "llama-index-core==0.12.32",
    "chromadb==1.0.8",
    "llama-index-vector-stores-chroma==0.4.1",
    "llama-index-embeddings-huggingface==0.5.4",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100
